--- a/build.xml
+++ b/build.xml
@@ -26,7 +26,7 @@
     <property name="ubl.download.url.prefix" value="http://docs.oasis-open.org/ubl/os-UBL-${ubl.version}/" />
     <property name="ubl.schema.zip" value="UBL-${ubl.version}.zip" />
     <property name="ubl.download.url" value="${ubl.download.url.prefix}/${ubl.schema.zip}" />
-    <property name="cen.rules.version" value="1.2.0" />
+    <property name="cen.rules.version" value="1.2.1" />
     <property name="cen.rules.version.download" value="${cen.rules.version}" />
     <property name="cen.download.url.prefix" value="https://github.com/CenPC434/validation/releases/download/validation-${cen.rules.version}" />
     <property name="cen.download.url.ubl" value="${cen.download.url.prefix}/en16931-ubl-${cen.rules.version.download}.zip" />
@@ -240,7 +240,7 @@
         <filter token="xrechnung.version" value="${xrechnung.version}" />
         <filter token="xrechnung.spec.id" value="${xrechnung.spec.id}" />
         <filter token="ubl.version" value="${ubl.version}" />
-        <filter token="ubl.download.url" value="${ubl.download.url}}" />
+        <filter token="ubl.download.url" value="${ubl.download.url}" />
         <filter token="cii.version" value="${cii.version}" />
         <filter token="cii.download.url" value="${cii.download.url}" />
         <copy file="scenarios.xml" todir="${repository.dir}" failonerror="true" filtering="true" />
