--- a/build.xml
+++ b/build.xml
@@ -283,7 +283,8 @@
             <factory name="net.sf.saxon.TransformerFactoryImpl" />
         </xslt>
     </target>
-    <target name="test" depends="compile,init-test,prepare-validationtool" description="Test XRechnung Configuration" unless="skip.tests">
+    <target name="test" depends="compile,init-test,prepare-validationtool"
+        description="Test XRechnung Configuration" unless="test.skip">
         <echo>Creating validation reports ...</echo>
         <java jar="${lib.dir}/${validationtool.jar}" failonerror="yes" fork="yes" dir="${build.dir}">
             <arg value="-s" />
