--- a/development.build.properties.example
+++ b/development.build.properties.example
@@ -1,12 +1,20 @@
 ## Customize these properties to develop with local dependencies
 
 
-## Set this to true in order to activate targets for local developemnt
-#develop.local=true
+## Here values is the same as ant basedir because basedir is not set in this context
+# work.dir=/mnt/c/data/git-repos/validator-configuration-xrechnung
 
-## Here same as basedir cause basedir is not set in this context
-#work.dir=/mnt/c/data/git-repos/validator-configuration-xrechnung
 
-## Get latest schematron distribution from your local git project 
+## Set this property in order to activate targets for local development
+## Be aware the presence of this proporty determines some of the behaviour independent of the value
+# develop.local.validator=true
+
+validator.version=1.3.0-SNAPSHOT
+# Should point to main directorz of validator project, in case of local path
+#validator.download.url.prefix=file://${work.dir}/../validator/
+
+#develop.local.xr-testsuite=true
+
+## Get latest schematron distribution from your local git project
 ## Example is relative to this project directory in local file system
-#xr.schematron.download.url.prefix=file://${work.dir}/../xrechnung-schematron/dist/
+#xr.schematron.download.url.prefix=file://${work.dir}/../xrechnung-schematron/dist
