--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,7 @@
   <property name="dist.dir" location="${basedir}/dist" />
   <property name="test.src.dir" location="${src.dir}/test" />
   <property name="test.build.dir" location="${build.dir}/test" />
+  <property name="test.docs.dir" location="${test.build.dir}" />
   <property name="testsuite.instances.dir"
     location="${test.build.dir}/testsuite" />
 
@@ -26,8 +27,8 @@
   <!-- 3rd party resources -->
   <!-- KoSIT XML Validator -->
   <property name="validator.version" value="1.3.0-SNAPSHOT" />
-<property name="validator.download.url.prefix"
-    value="https://github.com/itplr-kosit/validator/releases/download/"/>
+  <property name="validator.download.url.prefix"
+    value="https://github.com/itplr-kosit/validator/releases/download/" />
   <!-- Pick by default the java 8 standalone distribution -->
   <property name="validator.jar"
     value="validationtool-${validator.version}-java8-standalone.jar" />
@@ -87,7 +88,8 @@
 
   <!-- Resource directories -->
   <property name="reports.schema.dir" location="${resource.dir}/xsd" />
-  <property name="test.docs.dir" location="${test.src.dir}/instances" />
+
+
   <property name="reports.dir" location="${build.dir}/reports" />
   <condition property="cen.master.target">
     <equals arg1="${cen.rules.zip}" arg2="master.zip" />
@@ -208,9 +210,9 @@
 
   <target name="retrieve-validator-from-github-release" depends="init"
     unless="develop.local.validator">
-<property name="download.url.full"></property>
+    <property name="download.url.full" />
 
-<echo message="Retrieving validator version=${validator.version} from "></echo>
+    <echo message="Retrieving validator version=${validator.version} from " />
 
     <get
       src="${validator.download.url.prefix}/v${validator.version}/validationtool-${validator.version}.zip"
@@ -460,6 +462,8 @@
   </target>
 
 
+
+
   <target name="compile"
     depends="compile-scenario,retrieve-all-schema-rules,compile-cen-rules,prepare-saxon,provide-validator"
     description="Compile XSDs and XSLTs into validation configuration conformat repository directory">
@@ -493,7 +497,18 @@
   </target>
 
 
-  <target name="init-test" depends="init, compile, compile-scenario"
+  <target name="compile-test-sources">
+
+    <filter token="xrechnung.spec.id" value="${xrechnung.spec.id}" />
+    <copy todir="${test.build.dir}" failonerror="true" filtering="true">
+      <fileset dir="${test.src.dir}">
+        <include name="**/*.xml" />
+      </fileset>
+    </copy>
+  </target>
+
+  <target name="init-test"
+    depends="init, compile, compile-scenario, compile-test-sources"
     description="Initializes test directory structure">
     <mkdir dir="${test.build.dir}" />
     <mkdir dir="${testsuite.instances.dir}" />
@@ -566,7 +581,7 @@
       <arg value="-o" />
       <arg value="${reports.dir}" />
       <arg value="${testsuite.instances.dir}" />
-      
+
     </java>
   </target>
 
@@ -630,7 +645,7 @@
       <arg value="--schematron" />
       <arg value="cencii=${resource.xsl.cen.cii}" />
       <arg value="--target ${test.build.dir}" />
-      <arg value="${test.src.dir}/ubl-inv" />
+      <arg value="${test.docs.dir}/ubl-inv" />
     </java>
   </target>
 
@@ -649,13 +664,13 @@
       <arg value="--schematron" />
       <arg value="cencii=${resource.xsl.cen.cii}" />
       <arg value="--target ${test.build.dir}/testsuite" />
-      <arg value="${test.src.dir}/ubl-inv" />
+      <arg value="${test.docs.dir}/ubl-inv" />
     </java>
   </target>
 
 
   <target name="test"
-    depends="compile, test-validator-assertions,test-mutations">
+    depends="init-test, test-validator-assertions,test-mutations">
     <echo message="Testing all" />
   </target>
 
